Update security updates to v11 (major) (#12)
* Update security updates to v11

* Configures compiler and updates module dependencies

Adds compiler arguments to allow access to unnammed modules.

Removes unnecessary module dependency.

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Michał Wysoczański <michalwy@gmail.com>